--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
       run: echo ${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
     - name: Build and Push Docker image
-      uses: docker/build-push-action@
+      uses: docker/build-push-action@v6
       with:
         context: .
         push: true
