--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,16 +16,19 @@ jobs:
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
+
+    - name: Debug
+      run: echo "${{ secrets.DOCKERHUB_USERNAME }}"  "${{ secrets.DOCKERHUB_TOKEN }}""
     
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Build and Push Docker image
       uses: docker/build-push-action@v6
       with:
         context: .
         push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/vm-info-app:latest, ${{ secrets.DOCKER_USERNAME }}/vm-info-app:${{ github.sha }}
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/vm-info-app:latest, ${{ secrets.DOCKERHUB_USERNAME }}/vm-info-app:${{ github.sha }}
