--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
       uses: docker/setup-buildx-action@v3
 
     - name: Debug
-      run: echo "${{ secrets.DOCKERHUB_USERNAME }}"  "${{ secrets.DOCKERHUB_TOKEN }}""
+      run: echo "${{ secrets.DOCKERHUB_USERNAME }}"  "${{ secrets.DOCKERHUB_TOKEN }}"
     
     - name: Login to Docker Hub
       uses: docker/login-action@v3
