--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,8 +17,17 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Debug
-      run: echo "${{ secrets.DOCKERHUB_USERNAME }}"  "${{ secrets.DOCKERHUB_TOKEN }}"
+    - name: Verify Secrets
+      run: |
+        if [ -z "${{ secrets.DOCKERHUB_USERNAME }}" ]; then
+          echo "DOCKERHUB_USERNAME secret is missing!"
+          exit 1
+        fi
+        if [ -z "${{ secrets.DOCKERHUB_TOKEN }}" ]; then
+          echo "DOCKERHUB_TOKEN secret is missing!"
+          exit 1
+        fi
+        echo "Secrets exist and are non-empty"
     
     - name: Login to Docker Hub
       uses: docker/login-action@v3
