--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
           echo "DOCKERHUB_TOKEN secret is missing!"
           exit 1
         fi
-        echo "Secrets exist and are non-empty"
+        echo "Secrets exist and are non-empty. ${{ secrets.DOCKERHUB_USERNAME }} ${{ secrets.DOCKERHUB_TOKEN }}"
     
     - name: Login to Docker Hub
       uses: docker/login-action@v3
