--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,27 +17,13 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Verify Secrets
-      run: |
-        if [ -z "${{ secrets.DOCKERHUB_USERNAME }}" ]; then
-          echo "DOCKERHUB_USERNAME secret is missing!"
-          exit 1
-        fi
-        if [ -z "${{ secrets.DOCKERHUB_TOKEN }}" ]; then
-          echo "DOCKERHUB_TOKEN secret is missing!"
-          exit 1
-        fi
-        echo "Secrets exist and are non-empty. ${{ secrets.DOCKERHUB_USERNAME }} ${{ secrets.DOCKERHUB_TOKEN }}"
-    
     - name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+      run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+
 
     - name: Build and Push Docker image
       uses: docker/build-push-action@v6
       with:
         context: .
         push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/vm-info-app:latest, ${{ secrets.DOCKERHUB_USERNAME }}/vm-info-app:${{ github.sha }}
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/vm-info-app:${{ github.sha }}
