Add runner and update deployment

--- a/ansible/playbooks/configure_servers.yml
+++ b/ansible/playbooks/configure_servers.yml
@@ -1,5 +1,7 @@
 - name: Install docker
-  hosts: web_server
+  hosts:
+    - web_server
+    - proxy_server
   become: true
   roles:
     - role: docker
