--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Docker Build and Push to Dockerhub
+name: Docker Build and Push to Dockerhub and run Ansible playbook to deploy
 
 on:
   push:
@@ -8,7 +8,7 @@ jobs:
 
   build-and-deploy:
 
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
     - name: Checkout Repository
@@ -28,5 +28,6 @@ jobs:
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/vm-info-app:${{ github.sha }}
 
-    # - name: Run Ansible playbook to deploy on VMs
-    # ansible-playbook -i ./ansible/inventory.yml ./ansible/playbooks/deploy_app.yml -e "commit_hash=$(git rev-parse HEAD)"
+    - name: Run Ansible playbook to deploy on VMs
+      run: |
+        ansible-playbook -i ./ansible/inventory ./ansible/playbooks/deploy_app.yml -e "commit_hash=$(git rev-parse HEAD)"
